# poker-mtt

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  render.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e31f3f4b909_phase1_initial_schema.py  a2b1c0d4e5f6_add_bounty.py  b3c2d1e0f9a8_entry_structure_refactor.py  c4d3e2f1a0b9_created_at_clock_timestamp.py  d5e4f3a2b1c0_drop_sessions_add_marked_hands.py  e6f5a4b3c2d1_marked_hand_replay.py  f7a6b5c4d3e2_tournament_status.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  hands.py  marked_hands.py  sessions.py  tags.py  tournaments.py
backend/app/core/: defaults.py  exceptions.py  pagination.py  security.py
backend/app/core/hands/: __init__.py  parser.py
backend/app/core/metrics/: classification.py  engine.py  insights.py
backend/app/db/: base.py  enums.py  metadata.py  models.py  session.py
backend/app/repositories/: analytics.py  evaluation.py  tournament.py  user.py
backend/app/schemas/: auth.py  common.py  marked_hand.py  tournament.py
backend/app/services/: analytics.py  auth.py  tag.py  tournament.py
backend/app/tests/: conftest.py  test_analytics.py  test_auth.py  test_hand_parser.py  test_hands_api.py  test_insights.py  test_marked_hands.py  test_metrics.py  test_registered_flow.py  test_tournaments.py
backend/app/tests/fixtures/hands/: HH20260630_Sicilia_V_-_US__0_05-US__0_10_-_USD_No_Limit_Hold_em.txt  (+6 more)
frontend/: .env.example  README.md  (+5 more)
(+39 files in other folders)
